[tool.poetry]
name = "kalman"
version = "0.1.0"
description = ""
authors = ["Alberto Mur-Lopez <amur@unizar.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0.66"
notebook = "^6.5.2"
scipy = "^1.9.3"
imutils = "^0.5.4"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
